[metadata]
name = sungrow-websocket
description = Add a short description here!
author = Stefan Wallentowitz
author_email = stefan.wallentowitz@hm.edu
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/wallento/sungrow-websocket

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiohttp
    terminaltables
    websockets

[options.entry_points]
 console_scripts =
     sungrow-websocket = sungrow_websocket:main
